--- a/ManagedWifi.vcxproj
+++ b/ManagedWifi.vcxproj
@@ -76,13 +76,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ManagedWifi.h" />
+    <ClInclude Include="IManagedWifiClient.h" />
+    <ClInclude Include="ManagedWifiClient.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="ManagedWifi.cpp" />
+    <ClCompile Include="ManagedWifiClient.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
