--- a/ManagedWifi.vcxproj.filters
+++ b/ManagedWifi.vcxproj.filters
@@ -15,24 +15,27 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ManagedWifi.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
     <ClInclude Include="Stdafx.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
+    <ClInclude Include="ManagedWifiClient.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="IManagedWifiClient.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ManagedWifi.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="AssemblyInfo.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="Stdafx.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="ManagedWifiClient.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
