--- a/ManagedWifi.vcxproj
+++ b/ManagedWifi.vcxproj
@@ -77,13 +77,17 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IManagedWifiClient.h" />
+    <ClInclude Include="Interface.h" />
     <ClInclude Include="ManagedWifiClient.h" />
+    <ClInclude Include="Network.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="Interface.cpp" />
     <ClCompile Include="ManagedWifiClient.cpp" />
+    <ClCompile Include="Network.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
