Renamed ManagedWifiClient to ManagedWifiContext

--- a/ManagedWifi.vcxproj
+++ b/ManagedWifi.vcxproj
@@ -76,9 +76,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IManagedWifiClient.h" />
+    <ClInclude Include="IManagedWifiContext.h" />
     <ClInclude Include="Interface.h" />
-    <ClInclude Include="ManagedWifiClient.h" />
+    <ClInclude Include="ManagedWifiContext.h" />
     <ClInclude Include="Network.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Stdafx.h" />
@@ -86,7 +86,7 @@
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="Interface.cpp" />
-    <ClCompile Include="ManagedWifiClient.cpp" />
+    <ClCompile Include="ManagedWifiContext.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
