--- a/ManagedWifi.vcxproj.filters
+++ b/ManagedWifi.vcxproj.filters
@@ -21,16 +21,16 @@
     <ClInclude Include="resource.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
-    <ClInclude Include="ManagedWifiClient.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
-    <ClInclude Include="IManagedWifiClient.h">
-      <Filter>File di intestazione</Filter>
-    </ClInclude>
     <ClInclude Include="Interface.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
     <ClInclude Include="Network.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="IManagedWifiContext.h">
+      <Filter>File di intestazione</Filter>
+    </ClInclude>
+    <ClInclude Include="ManagedWifiContext.h">
       <Filter>File di intestazione</Filter>
     </ClInclude>
   </ItemGroup>
@@ -41,13 +41,13 @@
     <ClCompile Include="Stdafx.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
-    <ClCompile Include="ManagedWifiClient.cpp">
-      <Filter>File di origine</Filter>
-    </ClCompile>
     <ClCompile Include="Interface.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
     <ClCompile Include="Network.cpp">
+      <Filter>File di origine</Filter>
+    </ClCompile>
+    <ClCompile Include="ManagedWifiContext.cpp">
       <Filter>File di origine</Filter>
     </ClCompile>
   </ItemGroup>
